force-app/main/default/objects/Cash_Drawer_Session__c/Cash_Drawer_Session__c.object-meta.xml
<CustomObject>
    <label>Cash Drawer Session</label>
    <nameField>
        <displayFormat>CDS{0000}</displayFormat>
        <label>Cash_Drawer_Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Drawer Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>