force-app/main/default/objects/Cash_Drawer_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cash Drawer Sessions</relationshipLabel>
    <relationshipName>Cash_Drawer_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>