force-app/main/default/objects/Cash_Drawer_Session__c/fields/Ending_Count__c.field-meta.xml
<CustomField>
    <fullName>Ending_Count__c</fullName>
    <label>Ending Count</label>
    <summarizedField>Cash_Drawer_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Cash_Drawer_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Ending Count</value>
    </summaryFilterItems>
    <summaryForeignKey>Cash_Drawer_Item__c.Cash_Drawer_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>