force-app/main/default/objects/Cash_Drawer_Session__c/fields/Expected_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_Count__c</fullName>
    <formula>(Cash_Float__c +  Total_Additional_Cash__c  +  Total_Sales_Cash__c) -  (Total_Expenses__c +  Total_Withdrawals__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>