force-app/main/default/objects/Cash_Drawer_Session__c/fields/Number_of_Cash_MOP_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cash_MOP_Orders__c</fullName>
    <label>Number of Cash MOP Orders</label>
    <summaryFilterItems>
        <field>Cash_Drawer_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>Cash_Drawer_Item__c.Cash_Drawer_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>