force-app/main/default/objects/Cash_Drawer_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reconciling</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
                <isActive>false</isActive>
                <label>Reconciled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>