force-app/main/default/objects/Cash_Drawer_Session__c/fields/TECH_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TECH_Start_Time__c</fullName>
    <formula>IF(
    OR(
        HOUR( Start_Time__c) = 0, 
        HOUR( Start_Time__c) = 12
    ), 
    &apos;12&apos;, 
    TEXT( 
        IF( 
            HOUR( Start_Time__c) &gt; 12, 
            HOUR( Start_Time__c) - 12, 
            HOUR( Start_Time__c) 
        )
    )
) 
&amp; &quot;:&quot; &amp; 
IF (
    MINUTE( Start_Time__c) &lt; 10, 
    &quot;0&quot; + TEXT( MINUTE( Start_Time__c) ), 
    TEXT( MINUTE( Start_Time__c) )
) 
&amp; IF (
    HOUR( Start_Time__c) &lt; 12, 
    &quot; AM&quot;, 
    &quot; PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Start_Time</label>
    <type>Text</type>
</CustomField>