force-app/main/default/objects/Cash_Drawer_Session__c/fields/Total_Count_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_Orders__c</fullName>
    <formula>Number_of_Cash_MOP_Orders__c +  Number_of_GCash_MOP_Orders__c + Number_of_Pending_Remittances__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Count Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>