force-app/main/default/objects/Cash_Drawer_Session__c/fields/Total_Sales_Cash__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Cash__c</fullName>
    <label>Total Sales(Cash)</label>
    <summarizedField>Cash_Drawer_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Cash_Drawer_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>Cash_Drawer_Item__c.Cash_Drawer_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>