force-app/main/default/objects/Cash_Drawer_Session__c/validationRules/CDS_Invalid_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CDS_Invalid_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must greater than Start Date</errorMessage>
</ValidationRule>