force-app/main/default/objects/Cash_Drawer_Session__c/listViews/Open_Drawers.listView-meta.xml
<ListView>
    <fullName>Open_Drawers</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Expected_Count__c</columns>
    <columns>Ending_Count__c</columns>
    <columns>Difference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Drawers</label>
</ListView>